# dna-sequence-data-handling

./: .gitignore  README.md  pyproject.toml
rico_dna_sequence_data_handling/: main.py
tests/: main_test.py
tests/data/: chimpanzee_HBB.fasta  norway_rat_HBB.fasta  pdb_seqres_small.txt
